modal z-index issues

--- a/ia/css/inhouse.css
+++ b/ia/css/inhouse.css
@@ -112,6 +112,9 @@ input[type="radio"] {
 .dropdown-menu {
   padding-bottom: 0;
 }
+.modal {
+  z-index: 1080;
+}
 /* bs resets end*/
 
 /* uk resets */
